syntax = "proto3";

option go_package = "fCalixto-Gb/Final-Project/GRPCServiceA/proto";

package proto;

import "google/api/annotations.proto";

// grpc service interface definition
service UserServices {
    rpc GetUser(GetUserReq) returns (GetUserResp) {}
    rpc CreateUser(CreateUserReq) returns (CreateUserResp) {}
    rpc DeleteUser(DeleteUserReq) returns (DeleteUserResp) {}
    rpc UpdateUser(UpdateUserReq) returns (UpdateUserResp) {}
    rpc Authenticate(AuthenticateReq) returns (AuthenticateResp) {}
    // other methods to come...
}

message GetUserReq {
    string id = 1;
}

message GetUserResp {
    string id = 1;
    string name = 2;
    int64 age = 3;
    string country = 4;
    string job = 5;
    string created = 6;
    string email = 7;
    Status error = 8;
}

message CreateUserReq {
    string name = 1;
    int64 age = 2;
    string pwd = 3;
    string country = 4;
    string job = 5;
    string email = 6;
}

message CreateUserResp {
    string id = 1;
    string created = 2;
    Status error = 3;
}

message Status {
    int32 code = 1;
    string message = 2;
}

message DeleteUserReq {
    string id = 1;
}

message DeleteUserResp {
    string deleted = 1;
    Status error = 2;
}

message UpdateUserReq {
    string name = 1;
    int64 age = 2;
    string pwd = 3;
    string country = 4;
    string job = 5;
    string email = 6;
}

message UpdateUserResp {
    string updated = 1;
    Status error = 2;
}

message AuthenticateReq {
    string pwd = 1;
    string email = 2;
}

message AuthenticateResp {
    string token = 1;
    Status error = 2;
}